--- a/index.html
+++ b/index.html
@@ -9,97 +9,72 @@
     <link rel="icon"
         href="https://cdn.shopify.com/s/files/1/1061/1924/products/Emoji_Icon_-_Cowboy_emoji_large.png?v=1571606089" />
     <link rel="stylesheet" href="css/styles.css">
-    
+    <script src="js/main.js"></script>
 </head>
 
 <body>
-
     <div class="container">
-
         <div id="grilla">
-
-            <div class="item" id="item1">
-                <header>
-                    <nav>
-                        <a href="#home" id="logo">
-                            <p>&#127800</p>
+            <header class="item" id="item1">
+                <a href="index.html" id="logo">&#10038</a>
+                <button href="#" id="menu">&#9776</a>
+                <nav>
+                    <ul id="main-menu">
+                        <li class="menu-item"><a class="boton" href="contact.html">CONTACTO</a></li>
+                        <li class="menu-item"><a class="boton" href="bio.html">BIO</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <h1 class="item" id="item2">hola</h1>
+            <article class="item" id="item4">
+                <p>SOY ANTONELLA FOSSATI</p>
+            </article>
+            <main class="item" id="item3">
+                <ul id="scroll">
+                    <li><a href="https://www.behance.net/gallery/89351183/Revista-Tight-Editorial" target="_blank">
+                            <img class="thumbnail"
+                                src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/c873a289351183.5e0bc45c358a5.jpg"
+                                alt="Revista-Tight"><span>Revista Tight</span>
                         </a>
-
-                        <a href="#" class="menu">&#9776</a>
-                        <ul id="main-menu">
-                            <li class="menu-item"><a class="boton" href="#contacto">CONTACTO</a></li>
-                            <li class="menu-item"><a class="boton" href="#bio">BIO</a></li>
-                        </ul>
+                    </li>
+                    <li><a href="#">
+                            <img class="thumbnail"
+                                src="https://padlet-uploads.storage.googleapis.com/1174825928/4a8da6eefcc5c631afeb0fc8f2e1bd4f/Entrega_Vitas_DGPE_NARJAA.png"
+                                alt="Envase-Vitas"><span>Jugo orgánico Vitas</span>
                         </a>
-                    </nav>
-                </header>
-            </div>
-
-            <div class="item" id="item2">
-                <h1> hola </h1>
-            </div>
-
-            <div class="item" id="item3">
-                <main>
-                    <div id="scroll">
-                        <ul>
-                            <li><a href="https://www.behance.net/gallery/89351183/Revista-Tight-Editorial">
-                                    <img class="thumbnail"
-                                        src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/c873a289351183.5e0bc45c358a5.jpg"
-                                        alt="Revista-Tight"><span>Revista Tight</span>
-                                </a></li>
-                            <li><a href="#">
-                                    <img class="thumbnail"
-                                        src="https://padlet-uploads.storage.googleapis.com/1174825928/4a8da6eefcc5c631afeb0fc8f2e1bd4f/Entrega_Vitas_DGPE_NARJAA.png"
-                                        alt="Envase-Vitas"><span>Jugo orgánico Vitas</span>
-                                </a></li>
-                            <li><a href="#">
-                                    <img class="thumbnail" src="https://i.postimg.cc/VvmFr3jd/Goya.png"
-                                        alt="Aquelarre"><span>Aquelarre</span>
-                                </a></li>
-                            <li><a href="#">
-                                    <img class="thumbnail"
-                                        src="https://i.postimg.cc/k5DSZ7yQ/833c9f89350685-5eebf78339222222237.jpg"
-                                        alt="App"><span>Museo de Anatomia "J J Naón"</span>
-                                </a></li>
-                            <li><a href="https://www.behance.net/gallery/69151219/Conservas-Afiche">
-                                    <img class="thumbnail"
-                                        src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/01acfc69151219.5b7659002fef3.jpg"
-                                        alt="Conservas"><span>Conservas</span>
-                                </a></li>
-                            <li><a href="#">
-                                    <img class="thumbnail" src="https://i.postimg.cc/4NKrJcNq/image.png"
-                                        alt="Pasta"><span>Coppia e Pasta</span>
-                                </a></li>
-
-                        </ul>
-                    </div>
-                </main>
-                </main>
-            </div>
-            <div class="item" id="item4">
-                <article>
-                    <p>SOY ANTONELLA FOSSATI &#128169</p>
-                </article>
-            </div>
-
-            <div class="item" id="item5"></div>
-            <div class="item" id="item6"></div>
-
-            <div class="item" id="item7">
-                <footer>
-                    <p>
-                        ©<b>ALT Cooperativa</b> <br>
-                        Todos los derechos reservados
-                    </p>
-                </footer>
-            </div>
-
+                    </li>
+                    <li><a href="#">
+                            <img class="thumbnail" src="https://i.postimg.cc/VvmFr3jd/Goya.png"
+                                alt="Aquelarre"><span>Aquelarre</span>
+                        </a>
+                    </li>
+                    <li><a href="https://www.behance.net/gallery/89350685/Museo-de-Anatomia-Sistema-de-identidad"
+                            target="_blank">
+                            <img class="thumbnail"
+                                src="https://i.postimg.cc/k5DSZ7yQ/833c9f89350685-5eebf78339222222237.jpg"
+                                alt="App"><span>Museo de Anatomia "J J Naón"</span>
+                        </a>
+                    </li>
+                    <li><a href="https://www.behance.net/gallery/69151219/Conservas-Afiche" target="_blank">
+                            <img class="thumbnail"
+                                src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/01acfc69151219.5b7659002fef3.jpg"
+                                alt="Conservas"><span>Conservas</span>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <img class="thumbnail" src="https://i.postimg.cc/4NKrJcNq/image.png"
+                                alt="Pasta"><span>Coppia e Pasta</span>
+                        </a>
+                    </li>
+                </ul>
+            </main>
+            <footer class="item" id="item5">
+                <p>
+                    ©<strong>ALT Cooperativa</strong> <br>
+                    Todos los derechos reservados
+                </p>
+            </footer>
         </div>
-
-        <iframe src="https://www.youtube.com/watch?v=7489t_bKw-Y" frameborder="3"></iframe>
-
-
     </div>
 </body>
 
